# maid

./: .env  .gitignore  .gitlab-ci.yml  .gitmodules  .metadata  404.html  CNAME  LICENSE  PRIVACY_POLICY.md  README.md  Readme_FR.md  TERMS_AND_CONDITIONS.md  app.config.ts  com.danemadsen.maid.yml  firebase.json  help.prompt  huggingface.yaml  huggingface_models.json  index.html  index.txt  jest.env.js  jest.setup.js  l10n.yaml  metro.config.js  models.json  next-sitemap.config.js  next.config.ts  package-lock.json  package.json  privacy.html  privacy.txt  pubspec.yaml  setup_flutter.bat  setup_flutter.sh  sitemap-0.xml  sitemap.xml  tsconfig.json  update-build-number.sh
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  general_issue.md
.github/assets/: maid.dmg
.github/page/: .gitignore  index.html  package-lock.json  package.json
.gitlab/: .gitlab-ci.yml
__test-utilities__/: render-app.ts  routes.ts
__test_utilities__/: render-app.ts
__tests__/: account.test.tsx  app.test.tsx  login.test.tsx  register.test.tsx
android/: .gitignore  build.gradle  gradle.properties  settings.gradle
app/: _layout.tsx  about.tsx  download.tsx  globals.css  index.tsx  layout.tsx  page.module.css  page.tsx  settings.tsx
arb/: app_ar.arb  app_de.arb  app_en.arb  app_es.arb  app_fr.arb  app_hi.arb  app_it.arb  app_jp.arb  app_ko.arb  app_nl.arb  app_pl.arb  app_pt.arb  app_ru.arb  app_tr.arb  app_vi.arb  app_zh.arb  app_zh_CN.arb  app_zh_TW.arb
assets/: default_assistant.json  default_character.json  default_parameters.json  default_settings.json  huggingface_models.json
components/: carousel.module.css  carousel.tsx  try-maid-button.module.css  try-maid-button.tsx
context/: chat.tsx  index.ts  system.tsx
core/: CMakeLists.txt  core.cpp  core.h
database/: messages.sql  storage.sql
db/: chat_messages.sql
docs/: API-Compatability.ods  README.md  manual.tex
hooks/: use-authentication.ts  use-mappings.ts  use-parameters.ts  use-popover.ts  use-root.ts  use-state-ref.ts  use-stored-record.ts  use-stored-string.ts  use-synced-image.ts  use-synced-string.ts  use-theme.ts  use-voice.ts
ios/: ExportOptions.plist
lib/: ModelFilePath.dart  bindings.dart  butler.dart  firebase_options.dart  generated_bindings_llama.dart  generated_bindings_llamamaid.dart  generated_bindings_llamasherpa.dart  lib.dart  llama_bindings.dart  llama_params.dart  main.dart  model.dart  settings.dart  theme.dart
linux/: CMakeLists.txt  llamamaid  llamasherpa  main.cc  my_application.cc  my_application.h
plugins/: maid-android.ts  with-maid-android.ts
public/: ads.txt  robots.txt
scripts/: create-appimage.sh  create-dmg.sh  create_appimage.sh  create_dmg.sh  install-hexagon.sh  setup_flutter.bat  setup_flutter.sh  update.bat  update.sh  update_build_number.bat
src/: CMakeLists.txt  butler.cpp  butler.h  core.cpp  core.h
src/butler/: CMakeLists.txt  butler.cpp  butler.h
src/llamamaid/: CMakeLists.txt  llamamaid.cpp  llamamaid.h
src/llamasherpa/: CMakeLists.txt  llamasherpa.cpp  llamasherpa.h
supabase/: chat_messages.sql  config.toml  storage_policy.sql
test/: widget_test.dart
utilities/: color-scheme.ts  local-db.ts  logger.ts  mappings.ts  metadata.ts  reasoning.ts  supabase.ts
web/: index.html  manifest.json
windows/: CMakeLists.txt  butler  llama.cpp
(+759 files in other folders)
